--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[tool.black]
+line-length = 79
+py36 = true
+
 [tool.poetry]
 name = "pygatherer"
 version = "0.0.1"
@@ -9,3 +13,4 @@ license = "MIT"
 python = "3.6"
 
 [tool.poetry.dev-dependencies]
+black = "^18.3-alpha.0"
