--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,9 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "3.6"
 
+requests = "^2.19"
+beautifulsoup4 = "^4.6"
+lxml = "^4.2"
+
 [tool.poetry.dev-dependencies]
 black = "^18.3-alpha.0"
