--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,11 @@ authors = ["Steph Papanik <spapanik21@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "3.6"
+python = "^3.6"
 
-requests = "^2.19"
-beautifulsoup4 = "^4.6"
-lxml = "^4.2"
+requests = "^2.0"
+beautifulsoup4 = "^4.0"
+lxml = "^4.0"
 
 [tool.poetry.dev-dependencies]
-black = "^18.3-alpha.0"
+black = "^18.0"
