--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,12 @@ beautifulsoup4 = "^4.0"
 lxml = "^4.0"
 
 [tool.poetry.dev-dependencies]
-black = "^18.0"
+# formatting
+black = {version = "*", allows-prereleases = true}
+
+# debugging
+ipython = "^7.2"
+ipdb = "^0.11.0"
+
+# testing
+pytest = "^4.0"
