--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 # minimal installation
 install:
   - "pip install -e ."
-  - "make requirements.txt"
+  - "pip install pytest"
 
 # run tests
 script:
