--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 language: python
+
 python:
-  - "3.6"
-# command to install dependencies
+  - "3.7"
+  - "3.8"
+
 install:
   - "pip install poetry"
-  - "pip install -e ."
   - "make requirements.txt"
-# command to run tests
+
 script:
-- "make tests"
+  - "make tests"
+
+after_success:
+  - coveralls
