--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ beautifulsoup4 = "^4.0"
 lxml = "^4.0"
 
 [tool.poetry.dev-dependencies]
-black = {version = "*", allows-prereleases = true}
+black = {version = "*", allow-prereleases = true}
 isort = "^4.3"
 
 pytest = "^5.1"
