--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ name = "pygatherer"
 version = "0.4.0"
 description = "An API for the gatherer"
 authors = [
-    "Stephanos Kuma <spapanik21@gmail.com>",
+    "Stephanos Kuma <stephanos@kuma.ai>",
 ]
 
 license = "LGPL-3.0+"
