--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ ipython = [
     {version = "^7.19.0", python = "^3.7.0"},
 ]
 ipdb = "^0.13.0"
+jedi = "<0.18.0"
 
 flake8 = "^3.8.0"
 flake8-bugbear = "^20.11.0"
