--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,8 @@ mypy = "^0.910"
 
 pytest = "^6.2.0"
 
+types-requests = "^2.25.0"
+
 ipython = [
     {version = "^7.16.0", python = "~3.6.0"},
     {version = "^7.25.0", python = "^3.7.0"},
