--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,6 @@ authors = [
 
 license = "LGPL-3.0+"
 readme = "README.rst"
-include = ["CHANGELOG.rst"]
 
 repository = "https://github.com/spapanik/pygatherer"
 
@@ -47,6 +46,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.7.0"
 
+pathurl = "^0.3.0"
 requests = "^2.0.0"
 beautifulsoup4 = "^4.0.0"
 lxml = "^4.0.0"
