--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.7.0"
 
-pathurl = "^0.3.0"
+pathurl = "^0.5.0"
 requests = "^2.0.0"
 beautifulsoup4 = "^4.0.0"
 lxml = "^4.0.0"
@@ -54,7 +54,7 @@ lxml = "^4.0.0"
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
 isort = "^5.10.0"
-mypy = "^0.930"
+mypy = "^0.931"
 
 pytest = "^6.2.0"
 types-requests = "^2.26.0"
@@ -62,11 +62,11 @@ types-requests = "^2.26.0"
 sphinx = "^4.3.0"
 sphinx-rtd-theme = "^1.0.0"
 
-ipython = "^7.30.0"
-ipdb = "^0.13.0"
+ptpython = "^3.0.0"
+pdbpp = "^0.10.0"
 
 flake8 = "^4.0.0"
-flake8-bugbear = "^21.11.0"
+flake8-bugbear = "^22.1.0"
 flake8-builtins = "^1.5.0"
 flake8-comprehensions = "^3.7.0"
 flake8-eradicate = "^1.2.0"
