--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,27 +44,17 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
+# python version
 python = "^3.7.0"
 
-pathurl = "^0.5.0"
-requests = "^2.0.0"
+# dependencies
 beautifulsoup4 = "^4.0.0"
 lxml = "^4.0.0"
+pathurl = "^0.5.0"
+requests = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
-isort = "^5.10.0"
-mypy = "^0.931"
-
-pytest = "^6.2.0"
-types-requests = "^2.26.0"
-
-sphinx = "^4.3.0"
-sphinx-rtd-theme = "^1.0.0"
-
-ptpython = "^3.0.0"
-pdbpp = "^0.10.0"
-
 flake8 = "^4.0.0"
 flake8-bugbear = "^22.1.0"
 flake8-builtins = "^1.5.0"
@@ -73,3 +63,11 @@ flake8-eradicate = "^1.2.0"
 flake8-executable = "^2.1.0"
 flake8-mutable = "^1.2.0"
 flake8-tidy-imports = "^4.5.0"
+isort = "^5.10.0"
+mypy = "^0.931"
+pdbpp = "^0.10.0"
+ptpython = "^3.0.0"
+pytest = "^6.2.0"
+sphinx = "^4.3.0"
+sphinx-rtd-theme = "^1.0.0"
+types-requests = "^2.26.0"
