--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,7 @@ requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.black]
-target-version = ["py37", "py38", "py39", "py310", "py311"]
-
-[tool.isort]
-profile = "black"
-known_tests = "tests"
-sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "TESTS"]
+target-version = ["py38", "py39", "py310", "py311"]
 
 [tool.mypy]
 check_untyped_defs = true
@@ -22,24 +17,59 @@ warn_unused_ignores = true
 warn_unreachable = true
 warn_unused_configs = true
 
-[tool.flake8]
-exclude = [
-    ".git",
-    "__pycache__",
-    ".venv",
-    ".cache",
+[tool.ruff]
+select = [
+    "A",
+    "ARG",
+    "B",
+    "BLE",
+    "C4",
+    "DTZ",
+    "E",
+    "ERA",
+    "EXE",
+    "F",
+    "FBT",
+    "G",
+    "I",
+    "INP",
+    "ISC",
+    "N",
+    "PGH",
+    "PIE",
+    "PLC",
+    "PLE",
+    "PLW",
+    "PT",
+    "PTH",
+    "RET",
+    "RSE",
+    "RUF",
+    "S",
+    "SIM",
+    "SLF",
+    "T10",
+    "TID",
+    "TRY",
+    "UP",
+    "W",
 ]
-max-line-length = 88
 ignore = [
-    "E203",
     "E501",
-    "W503",
+    "TRY003",
 ]
-banned-modules = """
-    mock = use unittest.mock
-    pytz = use zoneinfo
-"""
-ban-relative-imports = true
+src = ["src"]
+target-version = "py38"
+
+[tool.ruff.per-file-ignores]
+"tests/**" = ["S101"]
+
+[tool.ruff.flake8-tidy-imports]
+ban-relative-imports = "all"
+
+[tool.ruff.flake8-tidy-imports.banned-api]
+"mock".msg = "Use unittest.mock"
+"pytz".msg = "Use zoneinfo"
 
 [tool.pytest.ini_options]
 addopts = "-vv --cov --cov-report=term-missing:skip-covered"
@@ -47,6 +77,7 @@ testpaths = "tests"
 
 [tool.coverage.run]
 source = ["src/"]
+data_file = ".cov_cache/coverage.dat"
 
 [tool.poetry]
 name = "pygatherer"
@@ -59,7 +90,9 @@ authors = [
 license = "LGPL-3.0+"
 readme = "README.rst"
 
+homepage = "https://pygatherer.readthedocs.io/en/stable/"
 repository = "https://github.com/spapanik/pygatherer"
+documentation = "https://pygatherer.readthedocs.io/en/stable/"
 
 keywords=["magic", "MtG"]
 classifiers = [
@@ -69,7 +102,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 # python version
-python = "^3.7"
+python = "^3.8"
 
 # dependencies
 beautifulsoup4 = "^4.0"
@@ -78,29 +111,20 @@ pathurl = "^0.5"
 requests = "^2.0"
 
 [tool.poetry.group.dev.dependencies]
-ipdb = {version = "^0.13", python = "^3.10"}
-ipython = {version = "^8.9", python = "^3.10"}
-pipdeptree = "^2.3"
+ipdb = {version = "^0.13", python = "^3.9"}
+ipython = {version = "^8.11", python = "^3.9"}
+pipdeptree = "^2.5"
 
 [tool.poetry.group.lint.dependencies]
 black = "^23.1"
-flake8 = "^5.0"
-flake8-bugbear = "^23.1"
-flake8-builtins = "^2.0"
-flake8-comprehensions = "^3.10"
-flake8-eradicate = "^1.4"
-flake8-executable = "^2.1"
-flake8-mutable = "^1.2"
-Flake8-pyproject = "^1.2"
-flake8-tidy-imports = "^4.8"
-isort = "^5.11"
-mypy = "^0.991"
-types-requests = "^2.26"
+mypy = "^1.0"
+ruff = "^0.0"
+types-requests = "^2.28"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.1"
 pytest-cov = "^4.0"
 
 [tool.poetry.group.docs.dependencies]
-sphinx = {version = "^5.2", python = "^3.10"}
-sphinx-rtd-theme = {version = "^1.0", python = "^3.10"}
+sphinx = "^6.1"
+sphinx-rtd-theme = "^1.2"
