--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-root=true
+root = true
 
 [*]
 end_of_line = lf
@@ -8,5 +8,5 @@ indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.yml]
+[*.{yml,yaml}]
 indent_size = 2
