--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,27 @@
 [build-system]
-requires = ["poetry_core>=1.0.0"]
+requires = [
+    "poetry_core>=1.0.0",
+]
 build-backend = "poetry.core.masonry.api"
 
 [tool.black]
-target-version = ["py38", "py39", "py310", "py311"]
+target-version = [
+    "py38",
+]
 
 [tool.mypy]
 check_untyped_defs = true
 disallow_any_generics = true
+disallow_incomplete_defs = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
+disallow_untyped_defs = true
+extra_checks = true
 ignore_missing_imports = true
 no_implicit_reexport = true
 show_error_codes = true
+strict_equality = true
 warn_return_any = true
 warn_redundant_casts = true
 warn_unused_ignores = true
@@ -18,66 +29,100 @@ warn_unreachable = true
 warn_unused_configs = true
 
 [tool.ruff]
+src = [
+    "src",
+]
+target-version = "py38"
+
+[tool.ruff.lint]
 select = [
     "A",
     "ARG",
+    "ASYNC",
     "B",
     "BLE",
     "C4",
+    "COM",
     "DTZ",
     "E",
+    "EM",
     "ERA",
     "EXE",
     "F",
+    "FA",
     "FBT",
+    "FLY",
     "G",
     "I",
+    "ICN",
     "INP",
     "ISC",
+    "LOG",
     "N",
     "PGH",
+    "PERF",
     "PIE",
     "PLC",
     "PLE",
     "PLW",
     "PT",
     "PTH",
+    "Q",
     "RET",
     "RSE",
     "RUF",
     "S",
     "SIM",
     "SLF",
+    "SLOT",
     "T10",
     "TID",
     "TRY",
     "UP",
     "W",
+    "YTT",
 ]
 ignore = [
+    "COM812",
     "E501",
     "TRY003",
 ]
-src = ["src"]
-target-version = "py38"
 
-[tool.ruff.per-file-ignores]
-"tests/**" = ["S101"]
+[tool.ruff.lint.per-file-ignores]
+"tests/**" = [
+    "FBT001",
+    "PT011",
+    "S101",
+]
 
-[tool.ruff.flake8-tidy-imports]
+[tool.ruff.lint.flake8-tidy-imports]
 ban-relative-imports = "all"
 
-[tool.ruff.flake8-tidy-imports.banned-api]
+[tool.ruff.lint.flake8-tidy-imports.banned-api]
 "mock".msg = "Use unittest.mock"
 "pytz".msg = "Use zoneinfo"
 
+[tool.ruff.lint.isort]
+combine-as-imports = true
+forced-separate = [
+    "tests",
+]
+split-on-trailing-comma = false
+
 [tool.pytest.ini_options]
-addopts = "-vv --cov --cov-report=term-missing:skip-covered"
+addopts = "-vv"
 testpaths = "tests"
 
 [tool.coverage.run]
-source = ["src/"]
+source = [
+    "src/",
+]
 data_file = ".cov_cache/coverage.dat"
+
+[tool.coverage.report]
+show_missing = true
+skip_covered = true
+skip_empty = true
 
 [tool.poetry]
 name = "pygatherer"
@@ -94,7 +139,10 @@ homepage = "https://pygatherer.readthedocs.io/en/stable/"
 repository = "https://github.com/spapanik/pygatherer"
 documentation = "https://pygatherer.readthedocs.io/en/stable/"
 
-keywords=["magic", "MtG"]
+keywords = [
+    "magic",
+    "MtG",
+]
 classifiers = [
     "Development Status :: 2 - Pre-Alpha",
     "Operating System :: OS Independent",
@@ -106,25 +154,26 @@ python = "^3.8"
 
 # dependencies
 beautifulsoup4 = "^4.0"
-lxml = "^4.0"
-pathurl = "^0.5"
+lxml = "^5.0"
+pathurl = "^0.6"
 requests = "^2.0"
 
 [tool.poetry.group.dev.dependencies]
-ipdb = {version = "^0.13", python = "^3.9"}
-ipython = {version = "^8.11", python = "^3.9"}
-pipdeptree = "^2.5"
+ipdb = { version = "^0.13", python = "^3.10" }
+ipython = { version = "^8.21", python = "^3.10" }
+pickleshare = { version = "^0.7", python = "^3.10" }
+pipdeptree = "^2.13"
 
 [tool.poetry.group.lint.dependencies]
-black = "^23.1"
-mypy = "^1.0"
-ruff = "^0.0"
-types-requests = "^2.28"
+black = "^24.1"
+mypy = "^1.8"
+ruff = "^0.2"
+types-requests = "^2.0"
 
 [tool.poetry.group.test.dependencies]
-pytest = "^7.1"
-pytest-cov = "^4.0"
+pytest = "^8.0"
+pytest-cov = "^4.1"
 
 [tool.poetry.group.docs.dependencies]
-sphinx = "^6.1"
-sphinx-rtd-theme = "^1.2"
+furo = { version = "^2024.1", python = "^3.10" }
+sphinx = { version = "^7.2", python = "^3.10" }
