--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,64 @@
 [build-system]
 requires = [
-    "poetry_core>=1.0.0",
+    "phosphorus>=0.3",
 ]
-build-backend = "poetry.core.masonry.api"
+build-backend = "phosphorus.construction.api"
+
+[project]
+name = "pygatherer"
+version = "0.6.0"
+
+authors = [
+    { name = "Stephanos Kuma", email = "stephanos@kuma.ai" },
+]
+license = { text = "LGPLv3+" }
+
+readme = "docs/README.md"
+description = "An API for the gatherer"
+keywords = [
+    "magic",
+    "MtG",
+]
+classifiers = [
+    "Development Status :: 2 - Pre-Alpha",
+    "Operating System :: OS Independent",
+]
+
+requires-python = ">=3.9"
+dependencies = [
+    "beautifulsoup4~=4.0",
+    "lxml~=5.0",
+    "pathurl~=0.7",
+    "requests~=2.0",
+]
+
+[project.urls]
+homepage = "https://pygatherer.readthedocs.io/en/stable/"
+repository = "https://github.com/spapanik/pygatherer"
+documentation = "https://pygatherer.readthedocs.io/en/stable/"
+
+[tool.phosphorus.dev-dependencies]
+dev = [
+    "ipdb~=0.13; python_version>='3.10'",
+    "ipython~=8.21; python_version>='3.10'",
+]
+lint = [
+    "black~=24.1",
+    "mypy~=1.8",
+    "ruff~=0.5",
+    "types-requests~=2.0",
+]
+test = [
+    "pytest~=8.0",
+    "pytest-cov~=5.0",
+]
+docs = [
+    "mkdocs~=1.6",
+    "mkdocs-material~=9.5",
+    "mkdocs-material-extensions~=1.3",
+    "Pygments~=2.17",
+    "pymdown-extensions~=10.8",
+]
 
 [tool.black]
 target-version = [
@@ -134,60 +190,3 @@ data_file = ".cov_cache/coverage.dat"
 show_missing = true
 skip_covered = true
 skip_empty = true
-
-[tool.poetry]
-name = "pygatherer"
-version = "0.6.0"
-description = "An API for the gatherer"
-authors = [
-    "Stephanos Kuma <stephanos@kuma.ai>",
-]
-
-license = "LGPL-3.0+"
-readme = "docs/README.md"
-
-homepage = "https://pygatherer.readthedocs.io/en/stable/"
-repository = "https://github.com/spapanik/pygatherer"
-documentation = "https://pygatherer.readthedocs.io/en/stable/"
-
-keywords = [
-    "magic",
-    "MtG",
-]
-classifiers = [
-    "Development Status :: 2 - Pre-Alpha",
-    "Operating System :: OS Independent",
-]
-
-[tool.poetry.dependencies]
-# python version
-python = "^3.8"
-
-# dependencies
-beautifulsoup4 = "^4.0"
-lxml = "^5.0"
-pathurl = "^0.7"
-requests = "^2.0"
-
-[tool.poetry.group.dev.dependencies]
-ipdb = { version = "^0.13", python = "^3.10" }
-ipython = { version = "^8.21", python = "^3.10" }
-pickleshare = { version = "^0.7", python = "^3.10" }
-pipdeptree = "^2.13"
-
-[tool.poetry.group.lint.dependencies]
-black = "^24.1"
-mypy = "^1.8"
-ruff = "^0.4"
-types-requests = "^2.0"
-
-[tool.poetry.group.test.dependencies]
-pytest = "^8.0"
-pytest-cov = "^5.0"
-
-[tool.poetry.group.docs.dependencies]
-mkdocs = "^1.6"
-mkdocs-material = "^9.5"
-mkdocs-material-extensions = "^1.3"
-Pygments = "^2.17"
-pymdown-extensions = "^10.8"
