--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ keywords = [
 classifiers = [
     "Development Status :: 2 - Pre-Alpha",
     "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3 :: Only",
+    "License :: OSI Approved :: BSD License",
+    "Intended Audience :: Developers",
 ]
 
 requires-python = ">=3.9"
@@ -43,10 +46,10 @@ dev = [
     "ipython~=8.18",
 ]
 lint = [
-    "black~=24.8",
-    "mypy~=1.11",
-    "ruff~=0.6",
-    "types-requests~=2.0",
+    "black~=24.10",
+    "mypy~=1.12",
+    "ruff~=0.7",
+    "types-requests~=2.32"
 ]
 test = [
     "pytest~=8.3",
@@ -56,8 +59,8 @@ docs = [
     "mkdocs~=1.6",
     "mkdocs-material~=9.5",
     "mkdocs-material-extensions~=1.3",
-    "pygments~=2.17",
-    "pymdown-extensions~=10.9",
+    "pygments~=2.18",
+    "pymdown-extensions~=10.11",
 ]
 
 [tool.black]
@@ -121,9 +124,7 @@ select = [
     "PGH",
     "PERF",
     "PIE",
-    "PLC",
-    "PLE",
-    "PLW",
+    "PL",
     "PT",
     "PTH",
     "PYI",
@@ -151,6 +152,7 @@ ignore = [
     "COM812",
     "E501",
     "FIX002",
+    "PLR09",
     "TD002",
     "TD003",
     "TRY003",
@@ -159,6 +161,7 @@ ignore = [
 [tool.ruff.lint.per-file-ignores]
 "tests/**" = [
     "FBT001",
+    "PLR2004",
     "PT011",
     "S101",
 ]
@@ -178,16 +181,20 @@ forced-separate = [
 split-on-trailing-comma = false
 
 [tool.pytest.ini_options]
-addopts = "-vv"
+addopts = "-ra -v --cov"
 testpaths = "tests"
 
 [tool.coverage.run]
+branch = true
 source = [
     "src/",
 ]
 data_file = ".cov_cache/coverage.dat"
 
 [tool.coverage.report]
+exclude_also = [
+    "if TYPE_CHECKING:",
+]
 show_missing = true
 skip_covered = true
 skip_empty = true
