🔧 Fix trailing commas

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ lint = [
     "black~=24.10",
     "mypy~=1.13",
     "ruff~=0.8",
-    "types-requests~=2.32"
+    "types-requests~=2.32",
 ]
 test = [
     "pytest~=8.3",
