--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ lint = [
     "mypy~=1.13",
     "ruff~=0.8",
     "types-requests~=2.32",
+    "types-beautifulsoup4~=4.12",
 ]
 test = [
     "pytest~=8.3",
@@ -74,7 +75,7 @@ disallow_any_decorated = true
 disallow_any_explicit = true
 disallow_any_expr = false          # many builtins are Any
 disallow_any_generics = true
-disallow_any_unimported = false    # (strict mode): Remove all Any types
+disallow_any_unimported = true
 disallow_incomplete_defs = true
 disallow_subclassing_any = true
 disallow_untyped_calls = true
@@ -107,7 +108,6 @@ select = [
     "ALL",
 ]
 ignore = [
-    "ANN401", # (strict mode): Remove all Any types
     "C901",   # Adding a limit to complexity is too arbitrary
     "COM812", # Avoid magic trailing commas
     "D10",    # Not everything needs a docstring
@@ -153,7 +153,7 @@ data_file = ".cov_cache/coverage.dat"
 exclude_also = [
     "if TYPE_CHECKING:",
 ]
-fail_under = 40
+fail_under = 35
 precision = 2
 show_missing = true
 skip_covered = true
