--- a/pyproject.toml
+++ b/pyproject.toml
@@ -152,6 +152,7 @@ data_file = ".cov_cache/coverage.dat"
 [tool.coverage.report]
 exclude_also = [
     "if TYPE_CHECKING:",
+    "raise NotImplementedError",
 ]
 fail_under = 35
 precision = 2
