--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 requires = [
-    "phosphorus>=0.8",
+    "phosphorus>=0.9",
 ]
 build-backend = "phosphorus.construction.api"
 
@@ -40,7 +40,7 @@ homepage = "https://pygatherer.readthedocs.io/en/stable/"
 repository = "https://github.com/spapanik/pygatherer"
 documentation = "https://pygatherer.readthedocs.io/en/stable/"
 
-[tool.phosphorus.dev-dependencies]
+[dependency-groups]
 dev = [
     "ipdb~=0.13",
     "ipython~=8.18",
@@ -148,6 +148,9 @@ source = [
     "src/",
 ]
 data_file = ".cov_cache/coverage.dat"
+omit = [
+    "src/pygatherer/lib/type_defs.py",
+]
 
 [tool.coverage.report]
 exclude_also = [
