--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [build-system]
 requires = [
-    "phosphorus>=0.10",
+    "uv_build>=0.9.21,<0.10.0",
 ]
-build-backend = "phosphorus.construction.api"
+build-backend = "uv_build"
 
 [project]
 name = "pygatherer"
@@ -50,9 +50,9 @@ dev = [
     { include-group = "docs" },
 ]
 lint = [
-    "mypy~=1.18",  # Keep mypy for CI/CD
-    "ty~=0.0.1a21",
-    "ruff~=0.13",
+    "mypy~=1.19",  # Keep mypy for CI/CD
+    "ruff~=0.14",
+    "ty~=0.0.9",
     "types-requests~=2.32",
     "types-beautifulsoup4~=4.12",
     { include-group = "test_core" },
@@ -62,7 +62,7 @@ test = [
     { include-group = "test_core" },
 ]
 test_core = [
-    "pytest~=8.4",
+    "pytest~=9.0",
 ]
 docs = [
     "mkdocs~=1.6",
@@ -142,9 +142,13 @@ forced-separate = [
 ]
 split-on-trailing-comma = false
 
-[tool.pytest.ini_options]
-addopts = "-ra -v"
-testpaths = "tests"
+[tool.pytest]
+minversion = "9.0"
+strict = true
+addopts = ["-ra", "-v"]
+testpaths = [
+    "tests",
+]
 
 [tool.coverage.run]
 branch = true
@@ -153,7 +157,7 @@ source = [
 ]
 data_file = ".cov_cache/coverage.dat"
 omit = [
-    "src/pygatherer/lib/type_defs.py",
+    "src/**/type_defs.py",
 ]
 
 [tool.coverage.report]
